--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
     <div class="header">
         <ul class="nav">
             <div class="list-item-right">
-               <li>home</li> 
-                <li>store</li>
-                <li>settings</li>
+                <li><a>Home</a></li>
             </div>
-            
             <div class="list-item">
-                <li>login</li>
-                <li>sign up</li>
+                <li><a>some link</a></li>
+                <li><a>some link</a></li>
+                <li><a>some link</a></li>
             </div>
         </ul>
         <!--the upper content-->
@@ -33,7 +31,7 @@
                     <input class="login-button" type="button" value="LOGIN">
                 </div>
             </div>
-            <img class="upper-img" src="images/pexels-revac-film's&photography-68900.jpg" alt="ring pic">
+            <img class="upper-img" src="images/cool pic 1.jpg" alt="ring pic">
         </div>
     </div>
     <!--the center-->
@@ -41,19 +39,19 @@
         <h1>this is some randome text</h1>
         <div class="content-items-container">
             <div class="content-item">
-                <img class="content-img" src="images/pexels-revac-film's&photography-68900.jpg" alt="">
+                <img class="content-img" src="images/cool pic 2.jpg" alt="">
                 <p>this is some random text for now</p>
             </div>
             <div class="content-item">
-                <img class="content-img" src="images/pexels-revac-film's&photography-68900.jpg" alt="">
+                <img class="content-img" src="images/cool pic 3.jpg" alt="">
                 <p>this is some random text for now</p>
             </div>
             <div class="content-item">
-                <img class="content-img" src="images/pexels-revac-film's&photography-68900.jpg" alt="">
+                <img class="content-img" src="images/cool pic 4.jpg" alt="">
                 <p>this is some random text for now</p>
             </div>
             <div class="content-item">
-                <img class="content-img" src="images/pexels-revac-film's&photography-68900.jpg" alt="">
+                <img class="content-img" src="images/cool pic 5.jpg" alt="">
                 <p>this is some random text for now</p>
             </div>
         </div>
